--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
               <div class="column has-text-centered">
                 <div class="publication-links">
                   <span class="link-block">
-                    <a href="https://arxiv.org/pdf/<ARXIV PAPER ID>.pdf" target="_blank"
+                    <a href="https://arxiv.org/pdf/2510.20766.pdf" target="_blank"
                        class="external-link button is-normal is-rounded is-dark">
                       <span class="icon"><i class="fas fa-file-pdf"></i></span>
                       <span>Paper</span>
@@ -199,7 +199,7 @@
 <!--                  </span>-->
 
                   <span class="link-block">
-  <a href="https://arxiv.org/abs/<ARXIV PAPER ID>" target="_blank"
+  <a href="https://arxiv.org/abs/2510.20766" target="_blank"
      class="external-link button is-normal is-rounded is-dark">
     <span class="icon"><i class="ai ai-arxiv"></i></span>
     <span>arXiv</span>
@@ -207,7 +207,7 @@
 </span>
 
 <span class="link-block">
-  <a href="https://github.com/YOUR REPO HERE" target="_blank"
+  <a href="https://github.com/guyyariv/DyPE" target="_blank"
      class="external-link button is-normal is-rounded is-dark">
     <span class="icon"><i class="fab fa-github"></i></span>
     <span>Code</span>
