--- a/index.html
+++ b/index.html
@@ -553,12 +553,16 @@ For commercial use or licensing inquiries, please contact the
           <span class="copy-text">Copy</span>
         </button>
       </div>
-      <pre id="bibtex-code"><code>@article{YourPaperKey2024,
-  title={Your Paper Title Here},
-  author={First Author and Second Author and Third Author},
-  journal={Conference/Journal Name},
-  year={2024},
-  url={https://your-domain.com/your-project-page}
+      <pre id="bibtex-code"><code>
+        @misc{issachar2025dypedynamicpositionextrapolation,
+      title={DyPE: Dynamic Position Extrapolation for Ultra High Resolution Diffusion}, 
+      author={Noam Issachar and Guy Yariv and Sagie Benaim and Yossi Adi and Dani Lischinski and Raanan Fattal},
+      year={2025},
+      eprint={2510.20766},
+      archivePrefix={arXiv},
+      primaryClass={cs.CV},
+      url={https://arxiv.org/abs/2510.20766}, 
+}
 }</code></pre>
     </div>
 </section>
