--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:site" content="@YOUR_TWITTER_HANDLE">
   <meta name="twitter:creator" content="@AUTHOR_TWITTER_HANDLE">
-  <meta name="twitter:title" content="PAPER_TITLE">
+  <meta name="twitter:title" content="DyPE: Dynamic Position Extrapolation for Ultra High Resolution Diffusion">
   <meta name="twitter:description" content=".">
   <meta name="twitter:image" content="https://github.com/NoamIssachar/DyPE/static/carousel2.png">
   <meta name="twitter:image:alt" content="DyPE: Dynamic Position Extrapolation for Ultra High Resolution Diffusion">
@@ -101,12 +101,12 @@
   {
     "@context": "https://schema.org",
     "@type": "ScholarlyArticle",
-    "headline": "PAPER_TITLE",
-    "description": "BRIEF_DESCRIPTION_OF_YOUR_RESEARCH_CONTRIBUTION_AND_FINDINGS",
+    "headline": "DyPE: Dynamic Position Extrapolation for Ultra High Resolution Diffusion",
+    "description": "",
     "author": [
       {
         "@type": "Person",
-        "name": "FIRST_AUTHOR_NAME",
+        "name": "",
         "affiliation": { "@type": "Organization", "name": "INSTITUTION_NAME" }
       },
       {
